Fix invisible seperator on light theme

--- a/res/ui/themes/light.css
+++ b/res/ui/themes/light.css
@@ -7,6 +7,7 @@
     --toolbar-background: #ffffff;
     --toolbar-menuitem-hover: #e7e7e7;
     --toolbar-menuitem-active: #d8d8d8;
+    --toolbar-separator-color: #bbbbbb;
 
     --box-border-color: #000000;
     --box-background: white;
